--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "C_Cpp.errorSquiggles": "disabled"
+  "clangd.arguments": [
+    "--compile-commands-dir=.",
+    "--background-index",
+    "--clang-tidy"
+  ],
+  "C_Cpp.intelliSenseEngine": "Disabled"
 }
